# AIvizor

./: .env.example  .gitignore  LICENSE  PLANNING.md  README.md  docker-compose.yml
.claude/: launch.json
.github/workflows/: backend-tests.yml
.obsidian/: workspace.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_training_attempts.py  0003_users.py  0004_user_api_keys.py  0005_byok_multikey.py
backend/app/: config.py  main.py
backend/app/api/: admin.py  analyze.py  auth.py  keys.py  train.py
backend/app/db/: models.py  repositories.py  session.py
backend/app/llm/: base.py  claude.py  factory.py  gemini.py  mock.py
backend/app/prompts/: analyzer.py  trainer.py
backend/app/schemas/: __init__.py  analysis.py  auth.py  byok.py  common.py  training.py
backend/app/security/: __init__.py  crypto.py  http_guards.py  injection_signals.py  passwords.py  tokens.py
backend/app/services/: admin.py  analyzer.py  auth.py  byok.py  trainer.py
backend/tests/: conftest.py  test_admin_api.py  test_analyze_api.py  test_analyzer.py  test_analyzer_service.py  test_auth_api.py  test_byok_api.py  test_error_cors.py  test_health.py  test_http_guards.py  test_injection.py  test_llm_factory.py  test_llm_mock.py  test_prompts_analyzer.py  test_schemas.py  test_train_api.py  test_trainer_service.py
docs/: DEMO.md  MANUAL.md
docs/architecture/: admin.md  analyzer.md  auth.md  byok.md  frontend-auth.md  (+4 more)
frontend/: i18n.ts  next-env.d.ts  package-lock.json  package.json  tailwind.config.ts
(+32 files in other folders)
